# ar-stitching

./: .gitignore  .opencode_task.md  AGENTS.md  GEMINI.md  README.md  analyze_poses.py  check_hf.py  check_noise_propagation.py  debug_gls.py  eval_candidate.py  pyproject.toml  pytest.py  test_nans.py  test_opencode.py  test_rms.py  test_siac_reg.py  visualize_candidate.py
.opencode/: opencode.db-shm  opencode.db-wal
autoresearch/: AUTORESEARCH_COMPLETE_GUIDE.md  eval_multi_scenario.py  eval_s17_single.py  insights.md  program.md  results.tsv
configs/: agents.yaml  budgets.yaml  search_space.yaml
docs/: Optimisation_Robuste_Stitching_Optique_Metrologie.md  Optimisation_Robuste_Stitching_Optique_Metrologie_wrapped.txt  bases_contract.md  frame_contract.md  metrics_contract.md  recallage_subpixel.md  recallage_subpixel_amellioré.md  simulator_contract.md  stitching_implementation_guide.md
scenarios/: s00_identity.yaml  s01_shift_only.yaml  s02_reference_bias.yaml  s03_noise.yaml  s04_outliers.yaml  s05_retrace.yaml  s06_multi_overlap.yaml  s07_local_tiles.yaml  s08_outliers_median.yaml  s09_loader_extensible.yaml  s10_dc_piston.yaml  s11_subpixel_pose.yaml  s12_slow_drift.yaml  s13_structured_nuisance.yaml  s14_complex_retrace.yaml  s15_realistic_metrology.yaml  s16_digital_twin.yaml  s17_highres_circular.yaml  s17_highres_high_overlap.yaml  s17_highres_low_overlap.yaml  s17_highres_square.yaml  s17_lowres_circular.yaml  s18_random_alignment.yaml  template_full.yaml
scripts/: compare_baselines.py  compare_neoss_matlab.py  compare_optimized_algo.py  promote_best.py  (+7 more)
(+207 files in other folders)
