[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ar-stitching"
version = "0.1.0"
description = "Scientific autoresearch scaffold for optical sub-aperture stitching."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "PyYAML>=6.0",
    "matplotlib>=3.8",
    "pandas>=3.0.1",
    "openai>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
optics = [
    "optiland",
]
zernike_alt = [
    "prysm",
]
basis_extra = [
    "hcipy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
